# kuka_rl_ros2

./: .gitattributes  .gitmodules  Dockerfile  README.md  docker_build.sh  docker_run.sh  token.txt
src/catch_and_throw/: CMakeLists.txt  README.md  ft_idealpd_plate_nb_.csv  package.xml  policy_plate_nb.pt  script.txt  script2.txt  script_plate_nb.py
src/catch_and_throw/D435/: README.md  ball_track.py  ball_track_2.py  track_ball_2.py
src/catch_and_throw/D435/calibration/: capture_chessboard.py  extrinsic_adjustment.py  extrinsic_calibration_D35I.py  extrinsic_calibration_video.py  intrinsic_calibration_D35I.py
src/catch_and_throw/D435/camera_params/: Extrinsic_Calibration.avi  camera_matrix.npy  camera_pose_base.npz  camera_pose_inv.npz  dist_coeffs.npy
src/catch_and_throw/D435/tools/: 3d_plot.py  ekf_optimization_manually.py  ekf_optimizer.py  plot.py  plot_2.py  reset.py
src/catch_and_throw/D435/tracking/: ball_track.py  ball_track_2.py  cam_config.py  output.pstats  profile_report.txt  profile_results.prof  profile_results.pstats  rude_ball_detectiuon.py
src/catch_and_throw/config/: joint_state_node_config.yaml
src/catch_and_throw/include/catch_and_throw/: experiment_manager.hpp  file_utilities.h  manip_filter.h  polynomial_joint_predictor.h
src/catch_and_throw/input_files/: deepseek_xml_20250507_aee59d.xml
src/catch_and_throw/input_files/idealpd/: .~lock.ft_idealpd.csv#  6_tasks_15  actor_critic_afshin.py  agent.yaml  data_high_bouncing_2.csv  data_high_bouncing_2.py  detailed_results_ft_idealpd_1.csv  env.yaml  env_0_box.csv  env_0_data.csv  env_0_data3.csv  env_0_data_drag_forces.csv  env_0_plate.csv  env_1_data_dragforces_high_error.csv  env_3_data.csv  env_reduced_obs.py  environment.py  exporter.py  ft_idealpd.csv  ft_idealpd2.csv  ft_idealpd3.csv  ft_idealpd_2.csv  ft_idealpd_3.csv  ft_idealpd_4.csv  ft_idealpd_5.csv  ft_idealpd_6.csv  ft_idealpd_7 (copy).csv  ft_idealpd_7.csv  ft_idealpd_8.csv  ft_idealpd_9.csv  ft_idealpd_9.py  ft_idealpd_acc_damp.csv  ft_idealpd_box_high_error.csv  ft_idealpd_chnaged_gravity.csv  ft_idealpd_drag_force_lowdamping.csv  ft_idealpd_noise.csv  hbro.csv  hbro.pt  inspection.py  lbr_iiwa_six_states.py  (+41 more)
src/catch_and_throw/input_files/idealpd/100hz_worked_low_bouncing/: ft_idealpd.csv
src/catch_and_throw/input_files/idealpd/200hz_worked/: policy.pt
src/catch_and_throw/input_files/idealpd/ballistic motion dataset/: ballistic_fitting.py  ballistic_parameters.txt  set_vel.py  trajectoryvalidator.py  velocity_plotter.py
src/catch_and_throw/input_files/idealpd/dataset_realistic/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  (+63 more)
src/catch_and_throw/input_files/implicit/: env.yaml  ft_implicit.csv  model_implicit.pt
src/catch_and_throw/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/catch_and_throw/launch/: manipulator_optitrack.launch.py
src/catch_and_throw/lbr-description-isaac-sim/: .asset_hash  config.yaml  lbr_iiwa7.urdf
src/catch_and_throw/lbr_description/ros2_control/: lbr_controllers.yaml
src/catch_and_throw/log/: latest_build
src/catch_and_throw/output_files/tm/: dataset_collector.py  plot.py  recorded_data.csv  tm_ball_positions_world_np.csv  tm_ball_velocities_raw_world_np.csv  vel_comparator.py
src/catch_and_throw/scripts/: .~lock.kdl_ee_pos.csv#  README.md  trained_idealpd_7s.py
src/catch_and_throw/scripts/fake_trajectory/: README.md  ros2_qos.py  test_idealpd.py  test_idealpd_ros2.py  test_implicit.py
src/catch_and_throw/scripts/implementation/: README.md  state_definition.py  trained_idealpd.py  trained_idealpd_6s.py  trained_idealpd_w.py  trained_idealpd_w_ros2 copy.py  trained_idealpd_w_ros2.py  trained_idealpd_w_ros2_policy.py  trained_implicit.py
src/catch_and_throw/scripts/tools/: plot.py
src/catch_and_throw/src/: experiment_manager.cpp  file_utilities.cpp  files_saver.cpp  filters.py  joint_state_node+trained.txt  joint_state_node.cpp  joint_state_node_trained.cpp  joint_state_node_trained2.txt  joint_state_node_trained_bouncing.cpp  joint_state_node_trained_fakeball.cpp  joint_state_node_trained_golay.txt  joint_state_node_trained_golay_optitrack copy.txt  joint_state_node_trained_reduced.txt  joint_state_node_trained_reduced2.txt  joint_state_node_trained_w.txt  listener.txt  manip_filter.cpp  polynomial_joint_predictor.cpp
src/catch_and_throw/trash_src_code/: file_utilities.cpp  joint_state_node_trained_bouncing.cpp  manip_filter.cpp  polynomial_joint_predictor.cpp
src/optitrack_listener_cpp/: CMakeLists.txt  package.xml
src/optitrack_listener_cpp/config/: optitrack.yaml
src/optitrack_listener_cpp/include/optitrack_listener_cpp/: filters.hpp  optitrack_listener.hpp  optitrack_receiver.hpp
src/optitrack_listener_cpp/launch/: optitrack_listener.launch.py
src/optitrack_listener_cpp/optitrack_data/: .~lock.optitrack_body1_20250613_153718.csv#  optitrack_body1_20250613_153718.csv  optitrack_body1_20250613_154144.csv  optitrack_body1_20250613_154223.csv  optitrack_body1_20250613_154235.csv  optitrack_body1_20250613_154415.csv  optitrack_body1_20250613_155331.csv  optitrack_body1_20250613_155426.csv  optitrack_body1_20250613_160149.csv  optitrack_body1_20250613_160348.csv  optitrack_body1_20250613_163048.csv  optitrack_body1_20250617_082646.csv  optitrack_body1_20250617_083752.csv  optitrack_body1_20250617_083756.csv  optitrack_body1_20250617_083801.csv  optitrack_body1_20250617_083817.csv  optitrack_body1_20250617_083828.csv  optitrack_body1_20250617_083837.csv  optitrack_body1_20250617_083840.csv  optitrack_body1_20250617_083843.csv  optitrack_body1_20250617_083845.csv  optitrack_body1_20250617_083851.csv  optitrack_body1_20250617_083853.csv  optitrack_body1_20250617_083855.csv  optitrack_body1_20250617_083857.csv  optitrack_body1_20250617_083902.csv  optitrack_body1_20250617_083911.csv
src/optitrack_listener_cpp/scripts/: plot_trajectory.py
src/optitrack_listener_cpp/src/: filters.cpp  main.cpp  optitrack_listener.cpp  optitrack_receiver.cpp
(+1699 files in other folders)
