<?xml version="1.0"?>
<package format="3">
  <name>catch_and_throw</name>
  <version>0.0.0</version>
  <description>The catch_and_throw package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lbr_fri_idl</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl_vendor</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

